tests/baselines/reference/functionOverloads27.errors.txt
functionOverloads27.ts(4,13): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== functionOverloads27.ts (1 errors) ====
    function foo():string;
    function foo(bar:string):number;
    function foo(bar?:any):any{ return '' }
    var x = foo(5);
                ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
!!! related TS2793 functionOverloads27.ts:3:10: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
    